FlightPath 5.x Changelog
========================

2016-10-28
  Added a setting to Configure School settings, to hide advising checkmarks if the student has enrolled
  in the course they were advised for (also works for completed as well).

  Added a new permission (in Admin module section) for user to be able to Delete courses, groups, or degrees.
  Also added those checks to the deletion functions for those forms.
  
  Fixed a bug in the course_search module, which was negating any effort to NOT have course names automatically
  capitalized.
  

2016-10-24
  Added new hook: hook_flightpath_can_assign_course_to_group().  It lets custom modules decide whether or not
  to allow a course into a particular group at all.
  

2016-10-19
  Fixed bug where a course over the min hours of a group was being skipped over.
  

2016-10-16
  Fixed a bug where groups with min hours weren't correctly being limited by substitutions.


2016-10-10
  Corrected logic on the min hours in groups code.


2016-10-08
  Added default setting to stop filling courses into a group once the min hours are met.
  
  Display of min hours correctly calculated in group select with min hours after advising.
  

2016-09-29
  Fixed a bug with pie charts where it was not taking a group's min_hours into account.  Also, told it to ignore
  the "hours_required_by_type" in pie chart calculations, since a group can only be assigned to one requirement type
  at a time.
  

2016-09-28
  Fixed bug where searching for lastname, firstname broke the search. 
  

2016-09-23
  Improved error handling for Execute PHP function.


2016-09-22
  Added extra documentation for the structure of term ID's setting, and an additional setting to the course search code to support the [Y+1]
  year adjust code.
  

2016-09-10
  Made various changes so that pie charts are rendered using a hook-able theme function, similar to Course Row, Footnot, etc.
  This allows outside modules to modify the pie charts.
  